Improve Issues #508 Improve NoteEditor performance.